manual/app/gke/components/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: gcr.io/my-kubernetes/demo-webserver-image:latest
        imagePullSecrets:
        - name: gcr-json-key
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: gcsfuse-html-volume
          mountPath: /usr/share/nginx/html 
          readOnly: true
      serviceAccountName: demo-gke-service-account
      volumes:
      - name: gcsfuse-html-volume
        csi:
          driver: gcsfuse.csi.storage.gke.io
          volumeAttributes:
            bucketName: demo-app-bucket-ia
            mountOptions: "implicit-dirs"
