manual/app/gke/components/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: demo
spec:
  selector:
    app: webserver
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
